--- a/sample.env
+++ b/sample.env
@@ -5,7 +5,7 @@ GO_ENV="development"
 HTTP_PORT=4000
 
 # AWS Config
-AWS_S3_SERVER=http://s3.localhost.localtsack.cloud:4566
+AWS_S3_SERVER=http://s3.localhost.localstack.cloud:4566
 AWS_S3_ACCESS_KEY_ID=AWSACCESSKEYID
 AWS_S3_SECRET_KEY=awsSecRet
 AWS_S3_REGION=eu-west-2
