--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -21,3 +21,15 @@ services:
       - ./data/volumes/localstack:/var/lib/localstack
       - /var/run/docker.sock:/var/run/docker.sock
       - ./tools/docker/aws-docker-entrypoint.sh:/etc/localstack/init/ready.d/init-aws.sh
+  auth_postgres:
+    container_name: auth_postgres
+    image: postgres:15-alpine
+    restart: always
+    environment:
+      POSTGRES_DB: authentication
+      POSTGRES_USER: tea
+      POSTGRES_PASSWORD: Talha123!
+    ports:
+      - 5432:5432
+    volumes:
+      - ./data/volumes/postgres:/var/lib/postgresql/data
