--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -18,7 +18,7 @@ services:
       - DEBUG=1
       - DISABLE_CORS_CHECK="1"
     volumes:
-      - ./data/volumes/localstack:/var/lib/localstack
+      - ../localstack-volume:/var/lib/localstack
       - /var/run/docker.sock:/var/run/docker.sock
       - ./tools/docker/aws-docker-entrypoint.sh:/etc/localstack/init/ready.d/init-aws.sh
   auth_postgres:
@@ -32,4 +32,4 @@ services:
     ports:
       - 5432:5432
     volumes:
-      - ./data/volumes/postgres:/var/lib/postgresql/data
+      - ../postgres-volume:/var/lib/postgresql/data
